<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GitUS</string>
    <string name="placeholder_username">Username</string>
    <string name="placeholder_type">Type</string>
    <string name="placeholder_full_name">Full Name</string>
    <string name="empty_input_warning">The input field cannot be empty.</string>
    <string name="label_detail_user">Detail %s</string>
    <string name="default_value_number">0</string>
    <string name="default_value_string">-</string>
    <string name="label_followers">Followers</string>
    <string name="label_following">Following</string>
    <string name="label_favorite_user">Favorite Users</string>
    <string name="label_repos">Repos</string>
    <string name="label_bio" tools:ignore="UnusedResources">Bio</string>
    <string name="username">\@%s</string>
    <string name="placeholder_bio" tools:ignore="UnusedResources">Just keep swimming.</string>

    <string name="share_via">Share Via</string>
    <string name="user_content">Username: \@%s\nFullname: %s\nFollowers: %s\nRepos: %s\nFollowing: %s</string>

    <string name="zero_followers">0 Follower :(</string>
    <string name="zero_following">0 Following :(</string>
    <string name="user_not_found">User not found :(</string>
    <string name="empty_favorite_user">Favorite users are empty :(</string>
    <string name="hint_search">Whom are you looking for?</string>

    <string name="development_warning">This feature is in the development stage</string>

    <!-- contentDescription -->
    <string name="cd_back_button">Back button</string>
    <string name="cd_share_button">Share button</string>
    <string name="cd_web_button">Web button</string>
    <string name="cd_tab_layout">Tab layout for followers and following</string>
    <string name="cd_iv_avatar">Profile user image</string>
    <string name="cd_bg_avatar">Profile user background</string>
    <string name="cd_search_bar">Search bar</string>
    <string name="cd_favorite_button">Favorite button</string>
    <string name="cd_bg_color">Background color</string>
    <string name="cd_logo">Logo image</string>
    <string name="cd_fab">Favorite button</string>
</resources>